--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "prettier": "^2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.4.3",
     "react-redux": "^8.0.2",
+    "react-scroll": "^1.8.9",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.7",
