--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "react-intersection-observer": "^9.4.3",
     "react-redux": "^8.0.2",
     "react-scroll": "^1.8.9",
+    "react-uuid": "^2.0.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.7",
-    "sass": "^1.54.0"
+    "sass": "^1.54.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.6.0",
